2008-05-06  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler

        Preparation for upcoming work making LocalStorage persistent.

        When the application terminates, all LocalStorage areas must be sync'ed out to disk first.

        * WebView/WebView.mm:
        (+[WebView _applicationWillTerminate]):  Close all LocalStorage areas before quitting.

2008-05-05  Sam Weinig  <sam@webkit.org>

        Reviewed by Darin Adler.

        Fix for <rdar://problem/5884383>
        Escape look-a-like characters from the the entire url.

        * Misc/WebNSURLExtras.mm:
        (escapeUnsafeCharacters):
        (-[NSURL _web_userVisibleString]):

2008-05-05  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Darin.
        
        <rdar://problem/5865171> REGRESSION: Creating a new quote places caret at beginning of quote instead of the end

        * WebView/WebView.mm:
        (-[WebView _updateSettingsFromPreferences:]): Disable Range mutation on changes to
        the document for Tiger and Leopard Mail.  There is code in Mail that does it, and
        the two interfere.

2008-05-05  Sam Weinig  <sam@webkit.org>

        Reviewed by Tim Hatcher.

        Make the Inspector's localizable strings file match the format used by Dashboard widgets.

        * WebCoreSupport/WebInspectorClient.mm:
        (WebInspectorClient::localizedStringsURL):

2008-05-05  Anders Carlsson  <andersca@apple.com>

        Reviewed by Jess.

        Apparently preflighting can cause hangs for some reason. Revert this for now.
        
        * Plugins/WebNetscapePluginPackage.m:
        (-[WebNetscapePluginPackage _initWithPath:]):
        * Plugins/WebPluginPackage.m:
        (-[WebPluginPackage initWithPath:]):

2008-05-05  Darin Adler  <darin@apple.com>

        Reviewed by Mitz.

        - https://bugs.webkit.org/show_bug.cgi?id=18789
          fix some shouldCloseWithWindow edge cases

        * WebView/WebView.mm: