@@ -1,3 +1,13 @@
+2008-05-05  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Darin.
+
+        Change the isNativeLibraryData: method to handle universal binaries.
+        
+        * Plugins/WebBasePluginPackage.m:
+        (swapIntsInHeader):
+        (-[WebBasePluginPackage isNativeLibraryData:]):
+
 2008-05-06  Brady Eidson  <beidson@apple.com>
 
         Reviewed by Darin Adler
